WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
315217
[AutoFill Debugging] Fix an occasional web content process crash under `searchForClickTarget`
https://bugs.webkit.org/show_bug.cgi?id=315217
Summary
[AutoFill Debugging] Fix an occasional web content process crash under `searc...
Wenson Hsieh
Reported
2026-05-20 11:43:20 PDT
rdar://177450427
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2026-05-20 12:02:02 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/65312
EWS
Comment 2
2026-05-20 15:50:06 PDT
Committed
313604@main
(e558364e9e21): <
https://commits.webkit.org/313604@main
> Reviewed commits have been landed. Closing PR #65312 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug