[AutoFill Debugging] Fix an occasional web content process crash under `searchForClickTarget` https://bugs.webkit.org/show_bug.cgi?id=315217 rdar://177450427

Reviewed by Abrar Rahman Protyasha.

Add a missing null check to guard against the case where both search text and an invalid node
identifier was present.

Test: Tools/TestWebKitAPI/Tests/WebKit/WKWebView/TextExtractionTests.mm

* Source/WebCore/page/text-extraction/TextExtraction.cpp:
(WebCore::TextExtraction::textDescription):
* Tools/TestWebKitAPI/Tests/WebKit/WKWebView/TextExtractionTests.mm:
(TestWebKitAPI::TEST(TextExtractionTests, InteractionDebugDescriptionWithStaleNodeIdentifier)):

Canonical link: https://commits.webkit.org/313604@main